@@ -6,35 +6,12 @@
 
     <groupId>nniit</groupId>
     <artifactId>Lab3</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>2.3.2</version>
+
 
     <properties>
-        <java.version>14</java.version>
+        <java.version>11</java.version>
     </properties>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-
-                    <compilerArgs>
-                        <arg>--enable-preview</arg>
-                    </compilerArgs>
-                    <forceJavacCompilerUse>true</forceJavacCompilerUse>
-
-                </configuration>
-            </plugin>
-
-            <plugin>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <argLine>--enable-preview</argLine>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
 
     <dependencies>
 
